# swap-path

./: .env  .gitignore  CSV_ARBITRAGE_RECORDING.md  Cargo.toml  DETAILED_LOGGING_GUIDE.md  END_TO_END_TEST_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERSISTENCE_README.md  README.md  TESTING_SUMMARY.md  arbitrage_opportunities.csv  deny.toml  nohup.out  opportunity_details_1757003158.csv  optimization_proposal.md  test_final.rs
benches/: find_all_paths_bench.rs  market_bench.rs
data/merchant-moe/: lbt_pools_2025-08-31_21-08-51.csv  moelp_pools_2025-08-31_21-08-51.csv
data/selected/: poolLists.csv  tokenLists.csv
examples/: arbitrage_engine_example.rs  arbitrage_strategy_demo.rs  build_swap_path.rs  data_layer_example.rs  end_to_end_arbitrage_test.rs  historical_arbitrage_analyzer.rs  live_arbitrage_monitor.rs  mantle_integration_test.rs  market_snapshot_optimization_demo.rs  test_historical_data.rs  test_latest_vs_historical.rs
examples/functionality-tests/: csv_demo.rs
src/: benchmarks.rs  config_loader.rs  constants.rs  db_error.rs  lib.rs  market.rs  market_config.rs  mock_pool.rs  pool.rs  pool_id.rs  swap_path.rs  swap_path_hash.rs  swap_path_set.rs  swap_paths_container.rs  token.rs
src/data_sync/: README.md  aggregator.rs  config.rs  mod.rs  multicall.rs  service.rs  tests.rs  websocket.rs
src/data_sync/markets/: market.rs  market_config.rs  mod.rs
src/execution/: mod.rs  transaction_executor.rs
src/graph/: mod.rs  path_builder.rs  spfa_path_builder.rs  swap_path.rs  swap_path_set.rs  swap_paths_container.rs  token_graph.rs
src/logic/: arbitrage_engine.rs  mod.rs  pathfinder.rs  profit_calculator.rs  types.rs
src/logic/graph/: spfa_path_builder.rs  swap_path.rs  swap_paths_container.rs  token_graph.rs
src/logic/pools/: mod.rs  pool.rs
src/markets/: market.rs
src/pools/: mock_pool.rs  pool.rs
src/utils/: block_detail_logger.rs  cache.rs  constants.rs  mod.rs  token.rs
tech-docs/: ARCHITECTURE.md  DATA_LAYER_DESIGN.md  DESIGN.md  IMPLEMENTATION.md  LOGIC_LAYER_REFACTOR_SUMMARY.md  POOLS_ARCHITECTURE_IMPROVEMENT.md  THREE_LAYER_ARCHITECTURE_REFACTOR.md
tech-docs/Designs/: 1-DATA_LAYER.md  2-LOGIC_LAYER.md  3-EXECUTION_LAYER.md
