[package]
name = "swap-path"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
license = "MIT OR Apache-2.0"
homepage = ""
repository = ""

[dependencies]
ahash = "0.8.12"
async-trait = "0.1.88"
dashmap = { version = "6.1.0", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
petgraph = { version = "0.8.2", features = ["rayon", "serde-1"] }
regex = "1.11.1"
revm = "25.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "rt-multi-thread"] }
toml = "0.8.23"
tracing = "0.1.41"
typetag = "0.2.20"

alloy-reth-provider = { git = "https://github.com/cakevm/alloy-reth-provider", rev = "4f0403b" }

# alloy
alloy-evm = "0.10.0"
alloy-primitives = { version = "1.2.0", features = ["getrandom"] }
alloy-sol-types = "1.2.0"
alloy-transport = "1.0.9"

# required for alloy-reth-provider
alloy-provider = { version = "1.0.9", features = ["pubsub"] }
alloy-rpc-client = { version = "1.0.9", features = ["pubsub"] }

# reth
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.4.8" }

[dev-dependencies]
lazy_static = "1.5.0"

# bench
criterion = { version = "0.6.0", features = ["async_tokio"] }

[[bench]]
harness = false
name = "market_bench"

[[bench]]
harness = false
name = "find_all_paths_bench"
