[package]
name = "swap-path"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
homepage = ""
repository = ""

[dependencies]
ahash = "0.8.12"
async-trait = "0.1.88"
dashmap = { version = "6.1.0", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
petgraph = { version = "0.8.2", features = ["rayon", "serde-1"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "full", "rt-multi-thread"] }
toml = "0.8.23"
tracing = "0.1.41"
typetag = "0.2.20"

# alloy (仅保留必需的primitives和serde支持)
alloy-primitives = { version = "^0.8", features = ["getrandom", "serde"] }
alloy-sol-types = "^0.8"
futures = "0.3.31"
tracing-subscriber = "0.3.20"
rayon = "1.11.0"

# 数据层网络依赖
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.25", features = ["native-tls"] }
url = "2.5"
hex = "0.4"
csv = "1.3.1"
chrono = "0.4.41"

[dev-dependencies]
lazy_static = "1.5.0"

# bench
criterion = { version = "0.6.0", features = ["async_tokio"] }
tempfile = "3.21.0"

[[bench]]
harness = false
name = "market_bench"

[[bench]]
harness = false
name = "find_all_paths_bench"
